Responsive Design and Header

--- a/src/App.css
+++ b/src/App.css
@@ -1,26 +1,71 @@
+@font-face {
+font-family: "EauBlack";
+src:url("src/assets/font/eau_sans_bold.ttf");
+}
+
+@font-face {
+font-family: "EauBook";
+src:url("src/assets/font/eau_sans_book.ttf");
+}
+
+h2{
+  margin: 10px 5px 10px 15px;
+}
+.header {grid-area : header}
+.map-container {grid-area : map-container}
+.sidebar {grid-area : sidebar}
+
 .app-container {
-  display: flex;
-  height: 100vh;
-  width: 100vw;
+  height:100vh;
+  display: grid;
+  grid-template-rows: 80px 70% 20%; 
+  grid-template-columns: 100%; 
+  grid-template-areas:  
+    "header" 
+    "map-container" 
+    "sidebar" 
+}
+@media screen and (min-width: 888px) { 
+  .app-container { 
+    grid-template-rows: 80px 95%; 
+    grid-template-columns: 75% 25%; 
+    grid-template-areas:  
+      "header header" 
+      "map-container sidebar" 
+    ; 
+  } 
+}
+.header {
+  padding-left: 20px;
+  padding-top: 10px;
 }
 
 .map-container {
-  flex: 1;
-  padding: 20px;
+  padding: 10px;
   min-width: 200px;
 }
 
 .sidebar {
   /*flex: 0 0 400px;*/
-  padding: 20px;
+  padding: 10px 5px 5px 5px;
 }
 
 .sidebar-content {
   margin-bottom: 14px;
 }
 
+
 select {
   width: 100%;
+  padding: 10px 6px;
+  font-size: medium;
+  box-shadow: 0 0 2px rgb(204, 204, 204);
+}
+select option{
+  padding: 6px 6px;
+}
+.interfaceOptions{
+  padding: 8px 6px;
 }
 
 .btn--send-geometry {
@@ -37,3 +82,81 @@ select {
 .sr-only {
   display: none;
 }
+
+.checkbox-returnGeom {
+    position: relative;
+    float:left;
+    margin-left:10px;
+    font-size: medium;
+  }
+
+  .checkbox-returnGeom input[type="checkbox"] {
+    display: none;
+    visibility: hidden;
+  }
+  .checkbox-returnGeom .cbi {
+    -webkit-perspective: 20;
+    perspective: 20;
+    display: inline-block;
+    border: 2px solid #e8e8eb;
+    background: #e8e8eb;
+    border-radius: 4px;
+    transform: translate3d(0, 0, 0);
+    cursor: pointer;
+    transition: all 0.3s ease;
+  }
+  .checkbox-returnGeom .cbi:hover {
+    border-color: #218088;
+  }
+  .checkbox-returnGeom .flip {
+    display: block;
+    transition: all 0.4s ease;
+    transform-style: preserve-3d;
+    position: relative;
+    width: 20px;
+    height: 20px;
+  }
+  .checkbox-returnGeom input[type="checkbox"]:checked + .cbi {
+    border-color: #0b76ef;
+  }
+  .checkbox-returnGeom input[type="checkbox"]:checked + .cbi .flip {
+    transform: rotateY(180deg);
+  }
+  .checkbox-returnGeom .front,
+  .checkbox-returnGeom .back {
+    backface-visibility: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 20px;
+    height: 20px;
+    border-radius: 2px;
+  }
+  .checkbox-returnGeom .front {
+    background: #fff;
+    z-index: 1;
+  }
+  .checkbox-returnGeom .back {
+    transform: rotateY(180deg);
+    background: #218088;
+    text-align: center;
+    color: #fff;
+    line-height: 20px;
+    box-shadow: 0 0 0 1px #218088;
+  }
+  .checkbox-returnGeom .back svg {
+    margin-top: 3px;
+    fill: none;
+  }
+  .checkbox-returnGeom .back svg path {
+    stroke: #fff;
+    stroke-width: 2.5;
+    stroke-linecap: round;
+    stroke-linejoin: round;
+  }
+  .cbi-text {
+    float:left;
+    text-indent: 20px;
+    font-weight: 400;
+    
+  }
