--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,6 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
@@ -33,6 +32,9 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+}
+label{
+  font-weight: 600;
 }
 
 button {
@@ -47,7 +49,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #218088;
 }
 button:focus,
 button:focus-visible {
@@ -66,3 +68,48 @@ button:focus-visible {
     background-color: #cecece;
   }
 }
+
+.logo {
+  float:left;
+  height: auto;
+  padding-top: 12px;
+	text-indent: 20px;
+}
+
+.textGesamt{
+  height:100%;
+  min-width:500px;
+}
+
+
+
+.textG{
+  float:left;
+  padding:9px 5px 20px 40px;
+  font-family: EauBlack;
+  font-size: 40px;
+}
+
+.textA{
+  float:left;
+  padding:9px 40px 20px 5px;
+  font-family: EauBold;
+  font-size: 40px;
+}
+
+@media screen and (max-width: 600px) { 
+  .textG{
+  font-size: 20px;
+  padding:20px 5px 20px 40px;
+  }
+
+  .textA{
+  font-size: 20px;
+  padding:20px 5px 20px 10px;
+  }
+}
+
+.textarea{
+  width:98%;
+  min-height:300px;
+  }
