--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
+  height: 100%;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
@@ -85,27 +86,44 @@ button:focus-visible {
 
 .textG{
   float:left;
-  padding:9px 5px 20px 40px;
+  padding:7px 5px 20px 40px;
   font-family: EauBlack;
   font-size: 40px;
 }
 
 .textA{
   float:left;
-  padding:9px 40px 20px 5px;
+  padding:9px 40px 20px 0px;
   font-family: EauBold;
   font-size: 40px;
 }
 
-@media screen and (max-width: 600px) { 
+.textD{
+  float:left;
+  padding:17px 40px 20px 0px;
+  font-size: 30px;
+}
+
+@media screen and (max-width: 800px) { 
   .textG{
   font-size: 20px;
-  padding:20px 5px 20px 40px;
+  padding:20px 5px 20px 30px;
   }
 
   .textA{
   font-size: 20px;
-  padding:20px 5px 20px 10px;
+  padding:20px 5px 20px 0px;
+  }
+
+  .textD{
+  float:left;
+  padding:25px 40px 20px 10px;
+  font-size: 15px;
+}
+
+  .header{
+    padding-left: 10px;
+    padding-top: 5px;
   }
 }
 
