--- a/src/index.css
+++ b/src/index.css
@@ -69,14 +69,15 @@ button:focus-visible {
     background-color: #cecece;
   }
 }
+@media screen and (min-width: 471px) {
 
-.logo {
+  .logo img{
   float:left;
-  height: auto;
+  height: 50px;
   padding-top: 12px;
 	text-indent: 20px;
 }
-
+}
 .textGesamt{
   height:100%;
   min-width:500px;
@@ -93,7 +94,7 @@ button:focus-visible {
 
 .textA{
   float:left;
-  padding:9px 40px 20px 0px;
+  padding:8px 15px 20px 0px;
   font-family: EauBold;
   font-size: 40px;
 }
@@ -104,7 +105,7 @@ button:focus-visible {
   font-size: 30px;
 }
 
-@media screen and (max-width: 800px) { 
+@media screen and (max-width: 820px) { 
   .textG{
   font-size: 20px;
   padding:20px 5px 20px 30px;
@@ -117,13 +118,45 @@ button:focus-visible {
 
   .textD{
   float:left;
-  padding:25px 40px 20px 10px;
+  padding:25px 40px 20px 3px;
+  font-size: 15px;
+}
+.logo img{
+  height: 50px;
+  float:left;
+}
+  .header{
+    padding-left: 10px;
+    padding-top: 3px;
+    
+  }
+}
+@media screen and (max-width: 470px) { 
+  .textG{
+  font-size: 15px;
+  padding:10px 2px 20px 10px;
+  }
+
+  .textA{
+  font-size: 15px;
+  padding:10px 5px 20px 0px;
+  }
+
+  .textD{
+  float:left;
+  font-size: 10px;
+  padding:10px 10px 20px 3px;
   font-size: 15px;
 }
 
   .header{
     padding-left: 10px;
     padding-top: 5px;
+  }
+  .logo img{
+    padding-top:6px;
+    height: 30px;
+    text-indent: 10px;
   }
 }
 
